hphp/hack/test/typecheck/reactive/rx_append3.php
<?hh // partial

<<__Rx>>
function a(Map<int, int> $a): void {
  $a[] = Pair {1, 2};
}
